apps/factorio/factorio_deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factorio
  namespace: factorio
  labels:
    app.kubernetes.io/name: factorio
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: factorio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: factorio
    spec:
      volumes:
        - name: tpl
          configMap:
            name: factorio-server-settings-tpl
        - name: rendered
          emptyDir: { }
        - name: data
          emptyDir: { }
      containers:
        - name: factorio
          image: factoriotools/factorio:latest
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: rendered
              mountPath: /factorio/config/server-settings.json
              subPath: server-settings.json
            - name: data
              mountPath: /factorio
          ports:
            - name: factorio
              containerPort: 34197
              protocol: UDP
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "4Gi"

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
