apps/factorio/factorio_deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: factorio
  namespace: factorio
  labels:
    app.kubernetes.io/name: factorio
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: factorio
  template:
    metadata:
      labels:
        app.kubernetes.io/name: factorio
    spec:
      securityContext:
        runAsNonRoot: true
        runAsUser: 845
        runAsGroup: 845
        fsGroup: 845
      volumes:
        - name: data
          emptyDir: { }
        - name: rcon-secret
          secret:
            secretName: factorio-rcon

      containers:
        - name: factorio
          image: factoriotools/factorio:latest
          imagePullPolicy: IfNotPresent
          ports:
            - name: factorio
              containerPort: 34197
              protocol: UDP
            - name: rcon
              containerPort: 27015
              protocol: TCP
          volumeMounts:
            - name: data
              mountPath: /factorio
            - name: rcon-secret
              mountPath: /run/secret/rcon
              readOnly: true
          resources:
            requests:
              cpu: "1"
              memory: "2Gi"
            limits:
              cpu: "2"
              memory: "4Gi"
          livenessProbe:
            tcpSocket:
              port: rcon
            initialDelaySeconds: 60
            periodSeconds: 20

          readinessProbe:
            tcpSocket:
              port: rcon
            initialDelaySeconds: 30
            periodSeconds: 10

  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxUnavailable: 0
      maxSurge: 1
