apps/factorio/factorio_service.yml
apiVersion: v1
kind: Service
metadata:
  name: factorio-nodeport
  namespace: factorio
spec:
  type: NodePort
  externalTrafficPolicy: Local
  selector:
    app: factorio
  ports:
    - name: game
      protocol: UDP
      port: 34197
      targetPort: 34197
      nodePort: 34197        # optional fixed port; else omit
    - name: rcon
      protocol: TCP
      port: 27015
      targetPort: 27015
      nodePort: 30015        # choose in NodePort range
